Resource Utilization Fix